25/09/2020
==========
New: TWebImage. See image.prg
New: JS BrwSelect(). Select from table a row. brwselect.prg

13/09/2020
==========
New: Container BOX: See box.prg, box2.prg, box3.prg
Updated: New clause CLASS to ROW/ROWGROUP 