@@ -33,6 +33,23 @@
 	width: inherit;
 }
 
+fieldset.scheduler-border {
+    border: 1px groove #ddd !important;
+    padding: 10px !important;
+    margin-left: 2px !important;
+    -webkit-box-shadow:  0px 0px 0px 0px #000;
+    box-shadow:  0px 0px 0px 0px #000;
+}
+
+legend.scheduler-border {
+	font-size: 1em !important;
+	/*font-weight: bold !important;*/
+	text-align: left !important;
+	width:auto;
+	/*padding:0 10px;*/
+	border-bottom:none;
+}
+
 /*	Gif loading en autocomplete ui */
 
 .ui-autocomplete-loading {
