@@ -171,7 +171,7 @@ function MsgLoading( cMessage, cTitle, cIcon ) {
 }
 
 //	MsgNotify --------------------------------------------------------------------------------------	
-//	cType = 	succes, info, error, warning
+//	cType = 	success, info, error, warning
 //	Examples -> http://bootstrap-growl.remabledesigns.com/
 
 function MsgNotify( cMsg, cType, lSound ) {
@@ -206,7 +206,7 @@ function MsgNotify( cMsg, cType, lSound ) {
 	
 	
 	
-	$.notify( { message: cMsg }, { type: cType } );
+	$.notify( { icon: "images/tweb.png", message: cMsg }, { type: cType, icon_type: 'image' } );
 
 }	
 
