@@ -95,6 +95,9 @@ function SetDataJS( u )
 retu uValue
 
 
+
+
+
 //	-----------------------------------------------------------
 //	Include de una file
 //	-----------------------------------------------------------
